# Apla

./: CMakeLists.txt  generator.c  generator.h  lexer.c  lexer.h  list.c  list.h  main.c  node.c  node.h  parser.c  parser.h  position.c  position.h  str.c  str.h  token.c  token.h  utils.c  utils.h
res/: main.apla
